# FishStiffnessRL

./: .gitignore  CMakeLists.txt  README.md  bindings.cpp  build_fish_sim.sh  fish_env.py  stiffness_rl.py
src/: dynamics.cpp  dynamics.h  fluid.h  geometry.cpp  geometry.h  joint.h  kinematics.cpp  kinematics.h  link.cpp  link.h  math_utils.h  simulation.cpp  simulation.h
